[project]
name = "beancount-amazonurl"
version = "0.1.0"
description = "Beancount plugin for Amazon order URL generation"
readme = "README.md"
authors = [
    { name = "Paul", email = "hi@paulsc.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beancount-amazonurl = "beancount_amazonurl:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
